--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1>wrun</h1>
   
       <p>
-        The <code>wrun</code> allows you to dynamically run a function inside a Web Worker on the client side, without the needing of a dedicated file. This means that you can execute a JS function as a subprocess, avoiding the slow down, break or freeze of the main thread. This lib is also minimal: 811 bytes.
+        The <code>wrun</code> is a just-in-time multithread emulator for client side JS. It allows you to dynamically run a function inside a Web Worker on the client side, without the needing of a dedicated file. This means that you can execute a JS function as a subprocess, avoiding the slow down, break or freeze of the main thread. This lib is also minimal: 811 bytes.
       </p>
   
       <p><strong>For installation, usage and general docs:</strong></p>
