fix: button link not working

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </p>
   
       <p><strong>For installation, usage and general docs:</strong></p>
-      <button class="pm-btn-primary">Docs / Github</button>
+      <a href="https://felippe-regazio.github.io/wrun/" target="_blank" class="pm-btn-primary">Docs / Github</a>
     </div>
 
     <div>
